--- a/QuickStartIdentityServer/MvcClient/Properties/launchSettings.json
+++ b/QuickStartIdentityServer/MvcClient/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7901",
-      "sslPort": 44321
+      "applicationUrl": "http://localhost:39207",
+      "sslPort": 44377
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "QuickStartIdentityMVC": {
+    "MvcClient": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
